--- a/css/card_style.css
+++ b/css/card_style.css
@@ -41,6 +41,34 @@ body {
 
 
 
+.total_value_container {
+    position: absolute;
+    bottom: 5%;
+    left: 20%;
+    right: 20%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
+    height: fit-content;
+
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    padding: 5px;
+}
+
+
+
+.total_value_text {
+    font-family: 'Arial', sans-serif;
+    font-size: 24px;
+    color: white;
+}
+
+
+
 
 
 
@@ -83,6 +111,8 @@ body {
     top: 0;
 
     border: rgba(183, 174, 174, 0.665) 4px dashed;
+
+    border-radius: 10px;
 
     opacity: 0;
 
