--- a/css/card_style.css
+++ b/css/card_style.css
@@ -140,6 +140,22 @@ body {
     height: fit-content;
 }
 
+
+
+.overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0);
+    z-index: 999999999;
+    opacity: 1;
+    transition: all 1s ease;
+}
+
+
+
 /* #use_card_box{
     opacity: 1;
 } */
