--- a/css/start_style.css
+++ b/css/start_style.css
@@ -55,7 +55,7 @@ body {
 
 
 
-.start_page_text_button{
+.start_page_text_button, .start_page_setting_button {
     font-family: 'Arial', sans-serif;
     font-size: 48px;
     color: white;
@@ -95,8 +95,24 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgb(0, 0, 0);
-    z-index: -1;
-    opacity: 0;
+    z-index: 99999;
+    opacity: 1;
 
     transition: all 1s ease;
+}
+
+
+#background_color_setting{
+    width: 50px;
+    height: 50px;
+
+    border: none;
+    cursor: pointer;
+    transition: all 0.35s ease;
+}
+
+
+#background_color_setting:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 15px rgba(255, 255, 255, 0.7);
 }
