--- a/css/card_style.css
+++ b/css/card_style.css
@@ -158,17 +158,18 @@ body {
 
 .card-info-box {
     position: fixed;
-    background-color: white;
-    border: 2px solid black;
+    background-color: rgb(156, 156, 156);
+    border: 2px solid rgb(0, 0, 0);
     padding: 10px;
     border-radius: 5px;
     z-index: 1000;
-    max-width: 200px;
+    width: 250px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
     font-size: 14px;
 
     font-family: 'Arial', sans-serif;
-    font-size: 13px;
+    font-size: 15px;
+    color: white;
 }
 
 
