--- a/css/card_style.css
+++ b/css/card_style.css
@@ -176,8 +176,8 @@ body {
 .game_info_container{
     position: absolute;
 
-    top: -1%;
-    bottom: -1%;
+    top: -5%;
+    bottom: -5%;
 
     left: 1%;
 
@@ -276,4 +276,19 @@ body {
     font-size: 25px;
 
     width: auto;
+}
+
+
+
+
+/* https://stackoverflow.com/questions/73537320/how-do-i-make-the-html-window-appear-to-shake */
+.screen_shake_div {
+    width: 100%;
+    height: 100%;
+}
+
+@keyframes shake {
+    0% { transform: rotate(-1.25deg); }
+    50% { transform: rotate(1.25deg); }
+    100% { transform: rotate(-1.25deg); }
 }
