--- a/css/card_style.css
+++ b/css/card_style.css
@@ -350,9 +350,26 @@ body {
 
     pointer-events: none; /* makes sure it doesn't block other interactions */
 
-    transform: translate(-50%, -50%) rotate(0deg);
-
     z-index: 1000;
+}
+
+
+.card_score_text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-family: 'Arial', sans-serif;
+    font-size: 64px;
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+    text-shadow: 3px 3px 6px rgba(0, 0, 0, 1), 0 0 10px rgba(0, 0, 0, 0.8);
+    pointer-events: none;
+
+    opacity: 1 !important; /* https://www.w3schools.com/css/css_important.asp */
+
+    animation: counter_rotate_right ease;
+
+    z-index: 1001;
 }
 
 
@@ -376,5 +393,15 @@ body {
     100% {
         transform: scale(1.5) rotate(-45deg);
         opacity: 0;
+    }
+}
+
+
+@keyframes counter_rotate_right {
+    0% {
+        transform: translate(-50%, -50%) rotate(-45deg);
+    }
+    100% {
+        transform: translate(-50%, -50%) rotate(45deg);
     }
 }
