--- a/css/card_style.css
+++ b/css/card_style.css
@@ -160,7 +160,44 @@ body {
     background-color: rgb(156, 156, 156);
     border: 2px solid rgb(0, 0, 0);
     padding: 10px;
-    border-radius: 5px;
+    border-radius: 15px;
+    z-index: 1000;
+    max-width: 250px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+    font-size: 14px;
+
+    font-family: 'Arial', sans-serif;
+    font-size: 15px;
+    color: white;
+}
+
+.card-info-box p, .card-special-box p {
+    display: inline-block;
+    padding: 2px 6px;
+    border-radius: 6px;
+    line-height: 1.1;
+    margin: 5px 5px 0 0;
+    background: rgba(27, 27, 27, 0.213); /* subtle */
+}
+
+.card-info-box strong, .card-special-box strong {
+    display: inline-block;
+    border: 2px solid rgb(255, 255, 255);
+    padding: 2px 6px;
+    border-radius: 6px;
+    line-height: 1.1;
+    margin: 5px 5px 0 0;
+    background: rgba(225, 225, 225, 0.286); /* subtle */
+
+    width: 93%;
+}
+
+.card-special-box {
+    position: fixed;
+    background-color: rgb(156, 156, 156);
+    border: 2px solid rgb(0, 0, 0);
+    padding: 10px;
+    border-radius: 20px;
     z-index: 1000;
     width: 250px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
@@ -169,6 +206,8 @@ body {
     font-family: 'Arial', sans-serif;
     font-size: 15px;
     color: white;
+
+    transform: translateY(-50%);
 }
 
 
