--- a/css/card_style.css
+++ b/css/card_style.css
@@ -19,7 +19,7 @@ body {
 
 
 
-#cardsContainer, #use_cardsContainer, #cards_used_anim_container{
+#cardsContainer, #use_cardsContainer, #cards_used_anim_container, #upgrade_container{
     position: absolute;
     bottom: 15%;
     left: 20%;
@@ -40,10 +40,10 @@ body {
 
 /* sprite sheet tutorial gevonden op en copilot vragen gesteld over wat ik kon gebruiken bij de js: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_images/Implementing_image_sprites_in_CSS */
 
-.card{
+.card {
     width: 88px;  /* card width */
     height: 124px; /* card height */
-    z-index: 5;
+    z-index: 2;
     background-image: url('../images/cards/Poker_cards.png'); /*path to the image*/
     background-repeat: no-repeat;
     background-position: 0 0; /*top left card (default position)*/
@@ -99,7 +99,7 @@ body {
 }
 
 #deck_cards{
-    z-index: 10;
+    z-index: 3;
 
     transition: top 0.5s, left 0.5s;
     cursor: grab;
@@ -137,8 +137,12 @@ body {
     top: 10%;
 }
 
-.cards_used_anim_container{
+.cards_used_anim_container, .upgrade_container{
     top: 40vh;
+}
+
+.upgrade_container{
+    z-index: 11;
 }
 
 
@@ -150,7 +154,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgb(0, 0, 0);
-    z-index: 999999999;
+    z-index: 10;
     opacity: 1;
     transition: all 1s ease;
 }
@@ -161,7 +165,7 @@ body {
     border: 2px solid rgb(0, 0, 0);
     padding: 10px;
     border-radius: 15px;
-    z-index: 1000;
+    z-index: 4;
     max-width: 250px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
     font-size: 14px;
@@ -198,7 +202,7 @@ body {
     border: 2px solid rgb(0, 0, 0);
     padding: 10px;
     border-radius: 20px;
-    z-index: 1000;
+    z-index: 4;
     width: 250px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
     font-size: 14px;
@@ -355,7 +359,7 @@ body {
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 10000;
+    z-index: 6;
     pointer-events: none; /* makes sure it doesn't block other interactions */
 }
 
@@ -389,7 +393,7 @@ body {
 
     pointer-events: none; /* makes sure it doesn't block other interactions */
 
-    z-index: 1000;
+    z-index: 7;
 }
 
 
@@ -408,7 +412,7 @@ body {
 
     animation: counter_rotate_right ease;
 
-    z-index: 1001;
+    z-index: 5;
 }
 
 
@@ -443,4 +447,16 @@ body {
     100% {
         transform: translate(-50%, -50%) rotate(45deg);
     }
+}
+
+
+.upgrade_card{
+    width: 88px;  /* card width */
+    height: 124px; /* card height */
+    z-index: 2;
+    background-image: url('../images/upgrades/upgrade_cards.png'); /*path to the image*/
+    background-repeat: no-repeat;
+    background-position: 0 0; /*top left card (default position)*/
+    transition: transform 0.2s opacity 0.2s, box-shadow 0.2s;
+    cursor: pointer;
 }
