--- a/css/card_style.css
+++ b/css/card_style.css
@@ -149,10 +149,10 @@ body {
 
 .overlay{
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    top: -10%;
+    left: -10%;
+    width: 200%;
+    height: 200%;
     background-color: rgb(0, 0, 0);
     z-index: 10;
     opacity: 1;
