--- a/css/card_style.css
+++ b/css/card_style.css
@@ -135,6 +135,11 @@ body {
 
 .played_card_container{
     top: 10%;
+    right: 10%;
+}
+
+#use_cardsContainer{
+    right: 10%;
 }
 
 .cards_used_anim_container, .upgrade_container{
@@ -143,6 +148,7 @@ body {
 
 .upgrade_container{
     z-index: 11;
+    pointer-events: none;
 }
 
 
@@ -173,6 +179,8 @@ body {
     font-family: 'Arial', sans-serif;
     font-size: 15px;
     color: white;
+
+    pointer-events: none;
 }
 
 .card-info-box p, .card-special-box p {
@@ -212,6 +220,8 @@ body {
     color: white;
 
     transform: translateY(-50%);
+
+    pointer-events: none;
 }
 
 
