--- a/css/card_style.css
+++ b/css/card_style.css
@@ -196,7 +196,7 @@ body {
     padding: 10px;
     border-radius: 15px;
     z-index: 4;
-    max-width: 250px;
+    max-width: 300px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
     font-size: 14px;
 
@@ -214,6 +214,11 @@ body {
     line-height: 1.1;
     margin: 5px 5px 0 0;
     background: rgba(27, 27, 27, 0.213); /* subtle */
+    font-size: 18px;
+}
+
+.card-info-box strong, .card-special-box strong {
+    font-size: 18px;
 }
 
 .card-info-box strong, .card-special-box strong {
