--- a/css/start_style.css
+++ b/css/start_style.css
@@ -63,6 +63,22 @@ body {
     align-items: center;
 }
 
+.start_page_text_container{
+    position: absolute;
+    top: 10%;
+    bottom: 10%;
+    left: 7%;
+
+    right: 10%;
+
+    display: flex;
+    flex-direction: column;
+    gap: 1%;
+
+    justify-content: center;
+    align-items: center;
+}
+
 
 
 .start_page_text_button, .start_page_setting_button {
@@ -100,6 +116,22 @@ body {
 }
 
 
+.start_page_text{
+    font-family: 'Arial', sans-serif;
+    font-size: 48px;
+    color: white;
+
+    /* https://cssgradient.io/ */
+    background: #552a9b;
+    background: radial-gradient(circle,rgba(85, 42, 155, 0.93) 18%, rgba(170, 86, 170, 0.66) 63%, rgba(237, 83, 129, 0) 100%);
+
+    /* border-radius: 10px; */
+    padding: 10px;
+
+    text-align: center;
+
+    width: 90%;
+}
 
 
 .overlay{
