begin W.I.P + pictures + bug fixing

--- a/css/start_style.css
+++ b/css/start_style.css
@@ -165,3 +165,8 @@ body {
 
 
 
+.size-img{
+    background-image: url("../images/begin_assets/Needle_1_Needle.png");
+    width: auto;
+    height: auto;
+}
