--- a/css/tutorial.css
+++ b/css/tutorial.css
@@ -2,9 +2,14 @@
     font-family: 'Arial Black', sans-serif;
     font-size: 20px;
     color: white;
-    background-color: rgb(95, 95, 95);
+    background-color: rgba(95, 95, 95, 0.611);
     text-align: center;
+    z-index: 4002;
+}
+
+.tutorial_box{
     z-index: 4000;
+    position: relative;
 }
 
 .tutorial_overlay{
